--- a/Code/Sif3Framework/Sif.Framework.Tests/packages.config
+++ b/Code/Sif3Framework/Sif.Framework.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net45" />
+  <package id="SimpleInjector" version="3.3.2" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
 </packages>
