--- a/Code/Sif3Framework/Sif.Framework/packages.config
+++ b/Code/Sif3Framework/Sif.Framework/packages.config
@@ -8,4 +8,5 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net45" />
+  <package id="SimpleInjector" version="3.3.2" targetFramework="net45" />
 </packages>
