--- a/Code/Sif3Framework/Sif.Framework.EnvironmentProvider/packages.config
+++ b/Code/Sif3Framework/Sif.Framework.EnvironmentProvider/packages.config
@@ -7,11 +7,16 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="NHibernate" version="5.0.3" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.12" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="4.0.12" targetFramework="net461" />
   <package id="slf4net" version="0.1.32.1" targetFramework="net45" />
   <package id="slf4net.log4net" version="0.1.32.1" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.107.0" targetFramework="net461" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net461" />
 </packages>
