--- a/Code/Sif3FrameworkDemo/Sif.Framework.Demo.Setup/packages.config
+++ b/Code/Sif3FrameworkDemo/Sif.Framework.Demo.Setup/packages.config
@@ -6,5 +6,6 @@
   <package id="NHibernate" version="5.0.3" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net461" />
+  <package id="SimpleInjector" version="4.0.12" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.107.0" targetFramework="net461" />
 </packages>
