--- a/Code/Sif3Framework/Sif.Framework.Tests/packages.config
+++ b/Code/Sif3Framework/Sif.Framework.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="NHibernate" version="5.0.3" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net461" />
+  <package id="Sif.Specification.DataModel.Au" version="3.4.6.1" targetFramework="net461" />
   <package id="slf4net" version="0.1.32.1" targetFramework="net45" />
   <package id="slf4net.log4net" version="0.1.32.1" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.107.0" targetFramework="net461" />
